crates/knok/tests/ui/unknown_backend_option.stderr
error: unknown backend option `device`
 --> tests/ui/unknown_backend_option.rs:2:25
  |
2 |     backend("llvm-cpu", device = "default"),
  |                         ^^^^^^
